--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <title>Book 3, Chapter 7: Deleting Data (Recipe Delete)</title>
 </head>
 <body>
-    
+    <article id="recipeList"> </article>
+
+    <script type="module" src="./scripts/main.js"></script>
 </body>
 </html>
